# plates_recognizing

./: Dockerfile  compose.yaml  main.py  pyproject.toml  settings.py
src/: handle.py  huita.py  script.py
weights/EasyOCR/: standard.pth  standard.txt
weights/YOLO/: best.pt
